cmake_minimum_required(VERSION 3.13)
project(ansi)

set(CMAKE_CXX_STANDARD 14)

#add_executable(ansi ansi/main.cpp)
#add_executable(ansi sw_expert/pool.cpp)
#add_executable(ansi sw_expert/pinball.cpp)
#add_executable(ansi sw_expert/virus.cpp)
#add_executable(ansi sw_expert/bfs_dfs.cpp)
#add_executable(ansi baekjoon_samsung/marble_escape_2_2.cpp)
#add_executable(ansi baekjoon_samsung/shark_my2.cpp)
#add_executable(ansi baekjoon_samsung/shark_minki.cpp)
#add_executable(ansi baekjoon/10159_scale.cpp)
#add_executable(ansi baekjoon_samsung/research_facility_2.cpp)
#add_executable(ansi baekjoon_samsung/startlink.cpp)
#add_executable(ansi baekjoon_samsung/startlink_2.cpp)
#add_executable(ansi baekjoon_samsung/castle_defense.cpp)
#add_executable(ansi baekjoon_samsung/origami.cpp)
#add_executable(ansi baekjoon_samsung/origami_blog.cpp)
#add_executable(ansi baekjoon_samsung/research_facility_blog.cpp)
#add_executable(ansi baekjoon_samsung/slope.cpp)
#add_executable(ansi baekjoon_samsung/gear.cpp)
#add_executable(ansi baekjoon_samsung/dragon_curve.cpp)
#add_executable(ansi baekjoon_samsung/chicken.cpp)
#add_executable(ansi naver/third.cpp)
#add_executable(ansi naver/second.cpp)
#add_executable(ansi naver/first.cpp)
#add_executable(ansi naver/first_2.cpp)
#add_executable(ansi naver/second2.cpp)
#add_executable(ansi baekjoon/7576_tomato.cpp)
add_executable(ansi baekjoon/7569_tomato.cpp)